--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,19 @@
     transform: rotate(360deg);
   }
 }
+
+img{
+  width: 30%;
+  margin: 0 35%;
+}
+
+.table{
+  border: 1px solid black
+  
+}
+.center {
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 30px;
+}
+
